# VitaTestTask

./: .alembic.ini.example  .env.example  .gitignore  .logging.dev.yaml  .logging.yaml  README.md  make_migrate_and_migrate.sh  migrate.sh  pyproject.toml  run.sh
migrations/: env.py
migrations_example/: env.py  utils.py
test_task/: bootstrap.py  exceptions.py  main.py  middleware.py  router.py  settings.py
test_task/apps/diary/: depends.py  models.py  router.py  schemas.py
test_task/apps/diary/repositories/: diary_entry.py
test_task/apps/diary/services/: diary_entry.py
test_task/apps/diary/use_cases/: diary_entry.py
test_task/core/: db.py  loggers.py  models.py  schemas.py  use_cases.py
test_task/core/adapters/: base_http.py
test_task/core/repositories/: base_repository.py
test_task/core/utils/: exceptions.py
