[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "granian[reload]>=2.6.1",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
]
